fix img sizes on mobile

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -698,7 +698,7 @@ section {
     margin-left: 0;
     margin-top: 6rem;
     max-width: 100%;
-    min-height: 50rem;
+    // min-height: 50rem;
   }
 
   &__subcontainer--reverse {
